--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -1,6 +1,6 @@
 
 .navbars {
-    width:100%;
+  width:100%;
   background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
   height: 80px;
   //display: flex;
@@ -15,28 +15,28 @@
    // left:5.5%;
   //color: #fff;
   cursor: pointer;
-   width:3.5rem;
-    height:3.5rem;
-    position: relative;
-    border-radius:50%;
+  width:3.5rem;
+  height:3.5rem;
+  position: relative;
+  border-radius:50%;
 }
 
 .nav-menus {
   // right: 5rem; 
-    width:100%;
+  width:100%;
   // display: grid;
   // grid-template-columns: repeat(7, auto);
   // grid-gap:0px;
-   list-style: none;
-   text-align: center;
-   justify-content: end;
+  list-style: none;
+  text-align: center;
+  justify-content: end;
   z-index:1000000;
   margin-top:.48rem;
   //background:red;
 }
 
 .nav-items{
-   
+  // display: flex;
   align-items: center;
   //height: 50px;
   z-index:1000000;
@@ -47,6 +47,8 @@
 }
 
 .nav-links {
+  // margin-left:10%;
+  // margin-right: 10%;
   color: white;
   text-decoration: none;
   padding: 0.5rem 0.5rem;
@@ -66,34 +68,42 @@
 .fa-bars {
   color: #fff;
 }
+
+// .nav-links-mobile {
+//   display: none;
+// }
  
 .menu-icon {
   display: none;
 }
 
-@media screen and (max-width: 1200px) {
-   .navbars{
+@media screen and (max-width: 767.98px) {
+  .navbars{
      background-color: antiquewhite;
-       position:fixed;
-       width:100%;
-       height: 60px;
+     position:fixed;
+     width:100%;
+     height: 65px;
    }
+  // .NavbarItems {
+  //   position: relative;
+  //  }
   .navbar-nav .nav-link {
-    padding-right: 8.5rem;
-    padding-left: 8.5rem;
-}
+    padding-right: 8%;
+    padding-left: 8%;
+  }
   .nav-menus {
     //background:red;
     //display: flex;
     //flex-direction: column;
     width: 100%;
-    height: 90vh;
+    //height: 90vh;
     position: absolute;
     top: 52px;
     left: -500%;
     opacity: 1;
     transition: all 0.5s ease;
     padding-bottom: 3rem;
+    // grid-gap: 10px;
   }
 
   .nav-menus.active {
@@ -102,13 +112,17 @@
     opacity: 1;
     transition: all 0.5s ease;
     z-index: 100000;
+    height:92vh;
+    width: 100%;
   }
 
   .nav-links{
     display: block; 
     text-align: center;
     padding: 0.6rem 7rem;
+    //margin: 0rem auto;
     border-radius: 4px;
+    //width: 380%;
     background: #1888ff;
     text-decoration: none;
     color: #fff;
@@ -117,6 +131,7 @@
   }
 
   .nav-items{
+    width: 100%;
     display: block; 
     padding: 0 5rem;
   }
@@ -159,7 +174,7 @@
     display: block;
     width:160%;
     background: #242222;
-   transform:translateX(-26%);
+    transform:translateX(-26%);
     position: relative;
     align-items: center;
     list-style: none;
@@ -187,18 +202,25 @@
         font-size: 1.3rem;
         &:hover{
             text-decoration: none;
+            
         }
       }
     }
   }
 }
 
+
+
+// .set{
+//   position: relative;
+//    margin-top: 100px;
+// }
 .dropdownSet {
   background: red;
   width: 200px;
-margin-top:2px;
+  margin-top:2px;
   position: absolute;
-//    left:20%;
+  //left:20%;
   list-style: none;
   text-align: start;
   z-index:100000;
@@ -206,11 +228,11 @@ margin-top:2px;
 }
 
 .dropdownSet li {
-  background: #1888ff;
-  cursor: pointer;
-    z-index:4;
-  border-radius:4px;
-  list-style: none;
+   background: #1888ff;
+   cursor: pointer;
+   z-index:4;
+   border-radius:4px;
+   list-style: none;
 }
 
 .dropdownSet li:hover {
@@ -220,16 +242,15 @@ margin-top:2px;
 }
 
 .dropdownSet.clicked {
-  display: none;
-   
+  display: none; 
 }
 
 .dropdown-link {
-  display: block;
-  height: 100%;
-  width: 100%;
-  color: #fff;
-  padding: 10px;
+   display: block;
+   height: 100%;
+   width: 100%;
+   color: #fff;
+   padding: 10px;
    text-decoration:none;
    &:hover{
       text-decoration: none;
