--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -1,58 +1,65 @@
-
-.navbar {
-    width:100%;
+$main-height:5rem;
+$main-height-phone:4.2rem;
+.navbars {
+  width:100%;
   background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
-  height: 80px;
-  display: flex;
+  height: $main-height;
+  //display: flex;
   justify-content: center;
   align-items: center;
   font-size: 1.2rem;
   position:fixed;
   z-index:1000000 !important;
+  -webkit-box-shadow: 0 8px 6px -6px rgba(0,0,0,.8);
+  -moz-box-shadow: 0 8px 6px -6px rgba(0,0,0,.8);
+  box-shadow: 0 8px 6px -6px rgba(0,0,0,.8);
 }
 
 .navbar-logo {
-    left:5.5%;
+   // left:5.5%;
   color: #fff;
   cursor: pointer;
-   width:3.5rem;
-    height:3.5rem;
-    position:absolute;
-    border-radius:50%;
+  width:3.5rem;
+  height:3.5rem;
+  position: relative;
+  border-radius:50%;
 }
 
-.nav-menu {
-    
-    width:100%;
-  display: grid;
-  grid-template-columns: repeat(7, auto);
-  grid-gap:0px;
+.nav-menus {
+  // right: 5rem; 
+  width:100%;
+  // display: grid;
+  // grid-template-columns: repeat(7, auto);
+  // grid-gap:0px;
   list-style: none;
   text-align: center;
   justify-content: end;
   z-index:1000000;
-  margin-top:.48rem;
+  // margin-top:.48rem;
   //background:red;
 }
 
-.nav-item {
-    padding-right:7.5rem;
-  display: flex;
+.nav-items{
+  // display: flex;
   align-items: center;
-  height: 50px;
+  //height: 50px;
   z-index:1000000;
   text-decoration:none;
   //background:green;
-  
+  text-align: center;
+  color: #fff;
 }
 
 .nav-links {
+  // margin-left:10%;
+  // margin-right: 10%;
   color: white;
   text-decoration: none;
   padding: 0.5rem 0.5rem;
   z-index:1000000;
   text-decoration:none;
   font-size:1.4rem;
+  text-align: center;
 }
 
 .nav-links:hover {
@@ -66,90 +73,83 @@
   color: #fff;
 }
 
-.nav-links-mobile {
-  display: none;
-}
+// .nav-links-mobile {
+//   display: none;
+// }
  
 .menu-icon {
   display: none;
 }
-@media screen and (max-width: 1200px) {
-  .nav-item {
-   // background:blue;
-      padding-right:3.7rem;
+
+@media screen and (max-width: 767.98px) {
+  .menu-top{
+    margin-top: 1rem;
   }
-  .navbar-logo{
-      left:5%;
+  .menu-bottom{
+    // margin-bottom:.5rem;
   }
-  
-}
-@media screen and (max-width: 1380px) {
-  .nav-item {
-    //background:pink;
-      padding-right:4.8rem;
-  }
-   .navbar-logo{
-      left:5.5%;
-  }
-  
-}
-@media screen and (max-width: 1113px) {
-   .nav-item {
-     //background:red;
-      padding-right:3rem;
+  .navbars{
+     background-color: antiquewhite;
+     position:fixed;
+     width:100%;
+     height: $main-height-phone;
    }
-   .navbar-logo{
-      left:4%;
-   }
-}
-@media screen and (max-width: 960px) {
-   .navbar{
-       position:fixed;
-       width:100%;
-       height: 60px;
-   }
-  .NavbarItems {
-    position: relative;
-   }
-  .nav-item{
-    
+  // .NavbarItems {
+  //   position: relative;
+  //  }
+  .navbar-nav .nav-link {
+    padding-right: 8%;
+    padding-left: 8%;
   }
-  .nav-menu {
+  .nav-menus {
     //background:red;
-    display: flex;
-    flex-direction: column;
+    //display: flex;
+    //flex-direction: column;
     width: 100%;
-    height: 90vh;
+    //height: 90vh;
     position: absolute;
-    top: 52px;
+    top: 65px;
     left: -500%;
     opacity: 1;
     transition: all 0.5s ease;
-    grid-gap: 10px;
+    padding-bottom: 3rem;
+    // grid-gap: 10px;
   }
 
-  .nav-menu.active {
-    left: 0;
+  .nav-menus.active {
+    //margin-top:1rem;
+    //margin-bottom:1rem;
+    left: 0%;
     background: #242222;
     opacity: 1;
     transition: all 0.5s ease;
     z-index: 100000;
+    width: 100%;
+    min-height: calc(100vh - #{$main-height-phone});
+    //border: 2px solid red;
   }
 
-  .nav-links {
-    display: block;
+  .nav-links{
+    border: 2px solid green;
+    display: block; 
     text-align: center;
-    padding: 0.5rem;
-    margin: 2rem auto;
+    padding: 0.35rem 7rem;
+    //margin: 0rem auto;
     border-radius: 4px;
-    width: 80%;
+    //width: 380%;
     background: #1888ff;
     text-decoration: none;
     color: #fff;
     font-size: 1.3rem;
-  text-decoration:none;
+    text-decoration:none;
   }
 
+  .nav-items{
+    //border: 2px solid yellowgreen;
+    width: 100%;
+    display: block; 
+    padding: 0 5rem;
+  }
   .nav-links:hover {
     background: #fff;
     color: #1888ff;
@@ -174,8 +174,7 @@
     transform: translate(-100%, 50%);
     font-size: 1.8rem;
     cursor: pointer;
-    background:black;
- 
+    color: #fff;
   }
 
   .fa-times {
@@ -183,22 +182,65 @@
     font-size: 2rem;
   }
 
- 
-
   button {
     display: none;
+  }
+  .Phonedropdown {
+    display: block;
+    width:160%;
+    background: #242222;
+    transform:translateX(-26%);
+    position: relative;
+    align-items: center;
+    list-style: none;
+    z-index:100000;
+    border-radius:4px;
+    &-li{
+      background: #1888ff;
+      cursor: pointer;
+      z-index:4;
+      border-radius:4px;
+      text-align: center;
+      &:hover{
+        background: #5cabff;
+      }
+      &-link{
+        display: block;
+        padding: 0.4rem ;
+        margin: .7rem auto;
+        padding:.2rem 0rem ;
+        border-radius: 4px;
+        width: 80%;
+        background: #1888ff;
+        text-decoration: none;
+        color: #fff;
+        font-size: 1.3rem;
+        &:hover{
+            text-decoration: none;
+            
+        }
+      }
+    }
   }
 }
 
 
+@media screen and (max-width: 767.98px) {
+   
+
+}
 
 
+// .set{
+//   position: relative;
+//    margin-top: 100px;
+// }
 .dropdownSet {
   background: red;
   width: 200px;
+  margin-top:2px;
   position: absolute;
-  top: 70px;
-  left:30%;
+  //left:20%;
   list-style: none;
   text-align: start;
   z-index:100000;
@@ -206,29 +248,29 @@
 }
 
 .dropdownSet li {
-  background: #1888ff;
-  cursor: pointer;
-    z-index:4;
-  border-radius:4px;
+   background: #1888ff;
+   cursor: pointer;
+   z-index:4;
+   border-radius:4px;
+   list-style: none;
 }
 
 .dropdownSet li:hover {
   background: #5cabff;
+  list-style: none;
  
 }
 
 .dropdownSet.clicked {
-  display: none;
-   
+  display: none; 
 }
 
 .dropdown-link {
-  display: block;
-  height: 100%;
-  width: 100%;
-  color: #fff;
-  padding: 10px;
-  
+   display: block;
+   height: 100%;
+   width: 100%;
+   color: #fff;
+   padding: 10px;
    text-decoration:none;
    &:hover{
       text-decoration: none;
@@ -242,53 +284,169 @@
   border-radius:4px;
 }
 
-.Phonedropdown {
-  width:60%;
-  background: #242222;
- transform:translateX(20%);
-  position: relative;
-  align-items: center;
-  list-style: none;
-  z-index:100000;
-  border-radius:4px;
-  &-li{
-    background: #1888ff;
-    cursor: pointer;
-    z-index:4;
-    border-radius:4px;
-    text-align: center;
-    
-    &:hover{
-      background: #5cabff;
-   
-    }
-    &-link{
-      display: block;
-      padding: 0.4rem;
-      margin: .7rem auto;
-      border-radius: 4px;
-      width: 80%;
-      background: #1888ff;
-      text-decoration: none;
-      color: #fff;
-      font-size: 1.3rem;
-      &:hover{
-          text-decoration: none;
-          
-      }
-    }
-  }
-}
+
 
 
 .Phonedropdown.clicked {
   display: none;
    
 }
+.Phonedropdown{
+ 
+}
+
+
+.icon-bar {
+  //border:1px solid yellowgreen;
+  @media screen and (min-width: 767.98px) {
+     position: fixed;
+  }
+  top: 50%;
+
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  z-index:10000;
+    @media screen and (max-width: 767.98px) {
+       z-index:0;
+
+        // -webkit-transform: translateY(-100%);
+        // -ms-transform: translateY(-100%);
+        // transform: translateY(-100%);
+        width:100%;
+        
+    }
+}
+.icon-bar-footer{
+    position: relative;
+    display:none;
+     @media screen and (max-width: 767.98px) {
+     display:inline-block;
+    
+  }
+}
+
+.icon-bar a {
+ 
+  display:block;
+  text-align: center;
+  padding: 13px;
+  transition: all 0.3s ease;
+  color: white;
+  font-size: 20px;
+  @media screen and (max-width: 767.98px) {
+     display:inline-block;
+      width:calc(#{100%} / 5);
+    padding: 13px 30px;
+  }
+}
+
+.icon-bar a:hover {
+  background-color: #000;
+}
+
+.facebook {
+  
+  background: #3B5998;
+  color: white;
+  &:hover{
+    color:white;
+    box-shadow:2px 2px 10px black;
+  }
+}
+
+.twitter {
+  background: #55ACEE;
+  color: white;
+  @extend .facebook;
+}
+
+.google {
+  background: #dd4b39;
+  color: white;
+  @extend .facebook;
+}
+
+.linkedin {
+  background: #007bb5;
+  color: white;
+  @extend .facebook;
+}
+
+.youtube {
+  background: #bb0000;
+  color: white;
+  @extend .facebook;
+}
+
+.content {
+  margin-left: 75px;
+  font-size: 30px;
+}
 
 
 
 
+.icon-set{
+  display:none;
+  @media screen and (max-width: 767.98px){
+    display:inline-block;
+  }
+}
+.icon{
+  display:none;
+  @media screen and (max-width: 767.98px) {
+     position:absolute;
+    margin-top:92vh;
+    width:98%;
+   
+      &-set{
+        transform:translateX(20%);
+        padding:5px;
+        border-radius:50%;
+        //background-color:rgba(255,266,255,1);
+        font-size:35px;
+        &:hover{
+          box-shadow:2px 2px 10px black;
+        }
+    }
+
+  }
+}
+
+  .social-icon{
+    display:none;
+    @media screen and (max-width: 767.98px){
+      width:100%;
+    }
+  }
+  .social-icon a{
+    display:none;
+    @media screen and (max-width: 767.98px){
+        display:inline-block;
+        margin:0 3%;
+        padding:.5rem 1rem;
+        border-radius:50%;
+    }
+   
+  }
+
+
+  .social{
+     display:none;
+     @media screen and (max-width: 767.98px){
+       transform:translateX(-110%);
+        //background:yellowgreen;
+     }
+  }
+  .social.active{
+     @media screen and (max-width: 767.98px){
+      // background:green;
+        transform:translateX(12%);
+         //background:rgba(0,0,0,.3);
+         
+     }
+  }
 
 
 
