--- a/src/index.css
+++ b/src/index.css
@@ -395,55 +395,51 @@
   padding: 56px 0 0;
   margin: 0 auto; }
 
-.navbar {
+.navbars {
   width: 100%;
   background: linear-gradient(90deg, #1c1b1b 0%, #1a1717 100%);
-  height: 80px;
-  display: flex;
+  height: 5rem;
   justify-content: center;
   align-items: center;
   font-size: 1.2rem;
   position: fixed;
-  z-index: 1000000 !important; }
+  z-index: 1000 !important;
+  -webkit-box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.8);
+  -moz-box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.8);
+  box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.8); }
 
 .navbar-logo {
-  left: 5.5%;
   color: #fff;
   cursor: pointer;
   width: 3.5rem;
   height: 3.5rem;
-  position: absolute;
+  position: relative;
   border-radius: 50%; }
 
-.nav-menu {
+.nav-menus {
   width: 100%;
-  display: grid;
-  grid-template-columns: repeat(7, auto);
-  grid-gap: 0px;
   list-style: none;
   text-align: center;
   justify-content: end;
-  z-index: 1000000;
-  margin-top: .48rem; }
+  z-index: 1000; }
 
-.nav-item {
-  padding-right: 7.5rem;
-  display: flex;
+.nav-items {
   align-items: center;
-  height: 50px;
-  z-index: 1000000;
-  text-decoration: none; }
+  z-index: 1000;
+  text-decoration: none;
+  text-align: center;
+  color: #fff; }
 
 .nav-links {
   color: white;
   text-decoration: none;
   padding: 0.5rem 0.5rem;
-  z-index: 1000000;
+  z-index: 100;
   text-decoration: none;
-  font-size: 1.4rem; }
+  font-size: 1.4rem;
+  text-align: center; }
 
 .nav-links:hover {
-  background-color: #1888ff;
   border-radius: 4px;
   transition: all 0.2s ease-out;
   text-decoration: none; }
@@ -451,66 +447,51 @@
 .fa-bars {
   color: #fff; }
 
-.nav-links-mobile {
-  display: none; }
-
 .menu-icon {
   display: none; }
 
-@media screen and (max-width: 1200px) {
-  .nav-item {
-    padding-right: 3.7rem; }
-  .navbar-logo {
-    left: 5%; } }
-
-@media screen and (max-width: 1380px) {
-  .nav-item {
-    padding-right: 4.8rem; }
-  .navbar-logo {
-    left: 5.5%; } }
-
-@media screen and (max-width: 1113px) {
-  .nav-item {
-    padding-right: 3rem; }
-  .navbar-logo {
-    left: 4%; } }
-
-@media screen and (max-width: 960px) {
-  .navbar {
+@media screen and (max-width: 767.98px) {
+  .menu-top {
+    margin-top: 1rem; }
+  .navbars {
+    background-color: antiquewhite;
     position: fixed;
     width: 100%;
-    height: 60px; }
-  .NavbarItems {
-    position: relative; }
-  .nav-menu {
-    display: flex;
-    flex-direction: column;
+    height: 4.2rem; }
+  .navbar-nav .nav-link {
+    padding-right: 8%;
+    padding-left: 8%; }
+  .nav-menus {
     width: 100%;
-    height: 90vh;
     position: absolute;
-    top: 52px;
+    top: 65px;
     left: -500%;
     opacity: 1;
     transition: all 0.5s ease;
-    grid-gap: 10px; }
-  .nav-menu.active {
-    left: 0;
+    padding-bottom: 3rem; }
+  .nav-menus.active {
+    left: 0%;
     background: #242222;
     opacity: 1;
     transition: all 0.5s ease;
-    z-index: 100000; }
+    z-index: 100000;
+    width: 100%;
+    min-height: calc(100vh - 4.2rem); }
   .nav-links {
+    border: 2px solid green;
     display: block;
     text-align: center;
-    padding: 0.5rem;
-    margin: 2rem auto;
+    padding: 0.35rem 7rem;
     border-radius: 4px;
-    width: 80%;
     background: #1888ff;
     text-decoration: none;
     color: #fff;
     font-size: 1.3rem;
     text-decoration: none; }
+  .nav-items {
+    width: 100%;
+    display: block;
+    padding: 0 5rem; }
   .nav-links:hover {
     background: #fff;
     color: #1888ff;
@@ -531,19 +512,49 @@
     transform: translate(-100%, 50%);
     font-size: 1.8rem;
     cursor: pointer;
-    background: black; }
+    color: #fff; }
   .fa-times {
     color: #fff;
     font-size: 2rem; }
   button {
-    display: none; } }
+    display: none; }
+  .Phonedropdown {
+    display: block;
+    width: 160%;
+    background: #242222;
+    transform: translateX(-26%);
+    position: relative;
+    align-items: center;
+    list-style: none;
+    z-index: 100000;
+    border-radius: 4px; }
+    .Phonedropdown-li {
+      background: #1888ff;
+      cursor: pointer;
+      z-index: 4;
+      border-radius: 4px;
+      text-align: center; }
+      .Phonedropdown-li:hover {
+        background: #5cabff; }
+      .Phonedropdown-li-link {
+        display: block;
+        padding: 0.4rem;
+        margin: .7rem auto;
+        padding: .2rem 0rem;
+        border-radius: 4px;
+        width: 80%;
+        background: #1888ff;
+        text-decoration: none;
+        color: #fff;
+        font-size: 1.3rem; }
+        .Phonedropdown-li-link:hover {
+          text-decoration: none; } }
 
 .dropdownSet {
   background: red;
   width: 200px;
+  margin-top: 2px;
   position: absolute;
-  top: 70px;
-  left: 30%;
   list-style: none;
   text-align: start;
   z-index: 100000;
@@ -553,10 +564,12 @@
   background: #1888ff;
   cursor: pointer;
   z-index: 4;
-  border-radius: 4px; }
+  border-radius: 4px;
+  list-style: none; }
 
 .dropdownSet li:hover {
-  background: #5cabff; }
+  background: #5cabff;
+  list-style: none; }
 
 .dropdownSet.clicked {
   display: none; }
@@ -566,48 +579,133 @@
   height: 100%;
   width: 100%;
   color: #fff;
+  background:white;
   padding: 10px;
   text-decoration: none; }
   .dropdown-link:hover {
-    text-decoration: none; }
+    text-decoration: none; 
+    color:black;
+    background:rgba(255,255,255,0.5);
+    }
+
 
 .imgEvent {
   width: 9rem;
   margin-right: -3rem;
   border-radius: 4px; }
 
-.Phonedropdown {
-  width: 60%;
-  background: #242222;
-  transform: translateX(20%);
-  position: relative;
-  align-items: center;
-  list-style: none;
-  z-index: 100000;
-  border-radius: 4px; }
-  .Phonedropdown-li {
-    background: #1888ff;
-    cursor: pointer;
-    z-index: 4;
-    border-radius: 4px;
-    text-align: center; }
-    .Phonedropdown-li:hover {
-      background: #5cabff; }
-    .Phonedropdown-li-link {
-      display: block;
-      padding: 0.4rem;
-      margin: .7rem auto;
-      border-radius: 4px;
-      width: 80%;
-      background: #1888ff;
-      text-decoration: none;
-      color: #fff;
-      font-size: 1.3rem; }
-      .Phonedropdown-li-link:hover {
-        text-decoration: none; }
-
 .Phonedropdown.clicked {
   display: none; }
+
+.icon-bar {
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  z-index: 10000; }
+  @media screen and (min-width: 767.98px) {
+    .icon-bar {
+      position: fixed; } }
+  @media screen and (max-width: 767.98px) {
+    .icon-bar {
+      z-index: 0;
+      width: 100%; } }
+
+.icon-bar-footer {
+  position: relative;
+  display: none; }
+  @media screen and (max-width: 767.98px) {
+    .icon-bar-footer {
+      display: inline-block; } }
+
+.icon-bar a {
+  display: block;
+  text-align: center;
+  padding: 13px;
+  transition: all 0.3s ease;
+  color: white;
+  font-size: 20px; }
+  @media screen and (max-width: 767.98px) {
+    .icon-bar a {
+      display: inline-block;
+      width: calc(100% / 5);
+      padding: 13px 30px; } }
+
+.icon-bar a:hover {
+  background-color: #000; }
+
+.facebook, .twitter, .google, .linkedin, .youtube {
+  background: #3B5998;
+  color: white; }
+  .facebook:hover, .twitter:hover, .google:hover, .linkedin:hover, .youtube:hover {
+    color: white;
+    box-shadow: 2px 2px 10px black; }
+
+.twitter {
+  background: #55ACEE;
+  color: white; }
+
+.google {
+  background: #dd4b39;
+  color: white; }
+
+.linkedin {
+  background: #007bb5;
+  color: white; }
+
+.youtube {
+  background: #bb0000;
+  color: white; }
+
+.content {
+  margin-left: 75px;
+  font-size: 30px; }
+
+.icon-set {
+  display: none; }
+  @media screen and (max-width: 767.98px) {
+    .icon-set {
+      display: inline-block; } }
+
+.icon {
+  display: none; }
+  @media screen and (max-width: 767.98px) {
+    .icon {
+      position: absolute;
+      margin-top: 92vh;
+      width: 98%; }
+      .icon-set {
+        transform: translateX(20%);
+        padding: 5px;
+        border-radius: 50%;
+        font-size: 35px; }
+        .icon-set:hover {
+          box-shadow: 2px 2px 10px black; } }
+
+.social-icon {
+  display: none; }
+  @media screen and (max-width: 767.98px) {
+    .social-icon {
+      width: 100%; } }
+
+.social-icon a {
+  display: none; }
+  @media screen and (max-width: 767.98px) {
+    .social-icon a {
+      display: inline-block;
+      margin: 0 3%;
+      padding: .5rem 1rem;
+      border-radius: 50%; } }
+
+.social {
+  display: none; }
+  @media screen and (max-width: 767.98px) {
+    .social {
+      transform: translateX(-110%); } }
+
+@media screen and (max-width: 767.98px) {
+  .social.active {
+    transform: translateX(12%); } }
 
 .backtotop {
   font-size: 36px;
@@ -703,6 +801,7 @@
       margin-top: 3em; } }
 
 .foot-cont {
+  width: 100%;
   display: flex;
   /* margin-left: 100px; */
   /* margin-right: 100px; */
@@ -729,8 +828,6 @@
       .foot-cont-foot1 {
         padding: 1px 1px;
         margin: 1.5rem 7px; } }
-    .foot-cont-foot1-heading {
-      /* border-bottom: darkgrey; */ }
       .foot-cont-foot1-heading-text {
         font-weight: 900;
         font-size: 2.4rem; }
@@ -787,16 +884,181 @@
 .xyz:focus {
   color: green; }
 
+.s_stk {
+  z-index: 99; }
+
+.s_stk {
+  background: #f1f1f1;
+  display: inline-block;
+  width: 100%;
+  padding: 0;
+  position: fixed;
+  bottom: 0;
+  text-align: center;
+  border: 0; }
+
+.ss-ic, .sp-athr, .amp-tags, .post-date {
+  padding-bottom: 20px;
+  border-bottom: 1px dotted #ccc; }
+
+user agent stylesheet div {
+  display: block; }
+
+Style Attribute {
+  opacity: 1;
+  visibility: visible;
+  animation: 0s ease 0s 1 normal none running none; }
+
+.s_stk ul {
+  width: 100%;
+  display: inline-flex; }
+
+p, ol, ul, figure {
+  margin: 0 0 1em;
+  padding: 0; }
+
+ol, ul {
+  list-style-position: inside; }
+
+*, *:after, *:before {
+  box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -o-box-sizing: border-box; }
+
+user agent stylesheet ul {
+  display: block;
+  list-style-type: disc;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 40px; }
+
+.s_stk {
+  background: #f1f1f1;
+  display: inline-block;
+  width: 100%;
+  padding: 0;
+  position: fixed;
+  bottom: 0;
+  text-align: center;
+  border: 0; }
+
+.s_stk ul li {
+  flex-direction: column;
+  flex-basis: 0;
+  flex: 1 0 5%;
+  max-width: calc(100% - 10px);
+  display: flex;
+  height: 40px; }
+
+.ss-ic ul li {
+  font-family: "icomoon";
+  list-style-type: none;
+  display: inline-block; }
+
+user agent stylesheet li {
+  display: list-item;
+  text-align: -webkit-match-parent; }
+
+ol, ul {
+  list-style-position: inside; }
+
+user agent stylesheet ul {
+  list-style-type: disc; }
+
+.s_stk {
+  background: #f1f1f1;
+  display: inline-block;
+  width: 100%;
+  padding: 0;
+  position: fixed;
+  bottom: 0;
+  text-align: center;
+  border: 0; }
+
+Style Attribute {
+  opacity: 1;
+  visibility: visible;
+  animation: 0s ease 0s 1 normal none running none; }
+
+.ss-ic li:before {
+  border-radius: 2px;
+  text-align: center;
+  padding: 4px 6px; }
+
+.ss-ic ul li .s_fb {
+  color: #fff;
+  background: #3b5998; }
+
+.s_stk li a {
+  margin: 0;
+  border-radius: 0;
+  padding: 12px; }
+
+.ss-ic li a {
+  color: #fff;
+  padding: 5px;
+  border-radius: 3px;
+  margin: 0px 10px 10px 0px;
+  display: inline-block; }
+
+a, a:active, a:visited {
+  text-decoration: none;
+  color: #005be2; }
+
+a {
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent; }
+
+user agent stylesheet a:-webkit-any-link {
+  color: -webkit-link;
+  cursor: pointer;
+  text-decoration: underline; }
+
+.ss-ic ul li {
+  font-family: "icomoon";
+  list-style-type: none;
+  display: inline-block; }
+
+user agent stylesheet li {
+  text-align: -webkit-match-parent; }
+
+ol, ul {
+  list-style-position: inside; }
+
+user agent stylesheet ul {
+  list-style-type: disc; }
+
+.s_stk {
+  background: #f1f1f1;
+  display: inline-block;
+  width: 100%;
+  padding: 0;
+  position: fixed;
+  bottom: 0;
+  text-align: center;
+  border: 0; }
+
+.s_fb:after {
+  content: "\e92d"; }
+
+.s_rd {
+  background: #ff4500; }
+
 .happy {
   position: absolute;
-  width: 10rem;
-  height: 10rem;
+  width: 10%;
+  height: 10%;
   top: 28rem; }
   .happy-1 {
-    right: 2rem; }
+    right: 2%; }
   .happy-2 {
-    left: 2rem; }
-  @media (max-width: 37.5em) {
+    left: 2%; }
+  @media screen and (max-width: 767.98px) {
     .happy {
       display: none; } }
 
@@ -804,9 +1066,11 @@
   background-color: rgba(0, 0, 0, 0.7);
   width: 100%;
   position: fixed;
-  height: 90%; }
-  @media (max-width: 37.5em) {
+  height: 100%;
+  margin-top: 5rem; }
+  @media screen and (max-width: 767.98px) {
     .form {
+      margin-top: 4.2rem;
       height: 100%;
       z-index: 10000; } }
   .form-link {
@@ -814,32 +1078,34 @@
     position: fixed;
     transform: translate(20%, 30px);
     height: 90%; }
-    @media (max-width: 37.5em) {
+    @media screen and (max-width: 767.98px) {
       .form-link {
         width: 80%;
         transform: translate(10%, 50px);
         height: 90%; } }
   .form-close {
-    right: 82px;
-    top: 42px;
+    position: relative;
+    transform: translateX(-80%);
+    float: right;
+    margin-top: 2rem;
     width: 80px;
     height: 80px;
     border-radius: 50%;
-    position: absolute;
-    background-color: transparent;
+    z-index: 100000;
+    background-color: red;
     border: 1px solid transparent; }
+    @media screen and (max-width: 990px) {
+      .form-close {
+        width: 60px;
+        height: 60px; } }
     .form-close:active {
       border: 0px solid transparent !important;
       background-color: transparent !important;
       box-shadow: 0px 0px 0px transparent !important; }
-    @media (max-width: 37.5em) {
+    @media screen and (max-width: 767.98px) {
       .form-close {
-        position: absolute;
-        right: 3px;
-        top: 2px;
-        width: 55px;
-        height: 55px;
-        z-index: 10000; } }
+        width: 60px;
+        height: 60px; } }
     .form-close:hover {
       background-color: rgba(255, 255, 255, 0.7);
       box-shadow: 1px 1px 5px black; }
@@ -850,19 +1116,25 @@
     .form-close-btn::before, .form-close-btn::after {
       position: absolute;
       right: 35px;
-      top: 10px;
+      top: 7px;
       content: ' ';
       height: 63px;
       width: 10px;
       background-color: white;
       border-radius: 10px;
-      cursor: pointer; }
-      @media (max-width: 37.5em) {
+      cursor: pointer;
+      z-index: 100000; }
+      @media screen and (max-width: 767.98px) {
         .form-close-btn::before, .form-close-btn::after {
           height: 37px;
           width: 7px;
-          right: 25px;
-          top: 9px; } }
+          right: 25px; } }
+      @media screen and (max-width: 990px) {
+        .form-close-btn::before, .form-close-btn::after {
+          height: 48px;
+          width: 8px;
+          right: 27px;
+          top: 6px; } }
     .form-close-btn::before {
       transform: rotate(45deg); }
     .form-close-btn::after {
@@ -914,75 +1186,6 @@
 p {
   padding: 0 50px;
   font-family: "Times New Roman", Times, serif; }
-
-.form {
-  background-color: rgba(0, 0, 0, 0.7);
-  width: 100%;
-  position: fixed;
-  height: 90%; }
-  @media (max-width: 37.5em) {
-    .form {
-      height: 100%;
-      z-index: 10000; } }
-  .form-link {
-    width: 70%;
-    position: fixed;
-    transform: translate(21.5%, 30px);
-    height: 90%;
-    box-shadow: 1px 1px 5px white; }
-    @media (max-width: 37.5em) {
-      .form-link {
-        width: 80%;
-        transform: translate(10%, 50px);
-        height: 90%; } }
-  .form-close {
-    right: 82px;
-    top: 42px;
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    position: absolute;
-    background-color: transparent;
-    border: 1px solid transparent; }
-    .form-close:active {
-      border: 0px solid transparent !important;
-      background-color: transparent !important;
-      box-shadow: 0px 0px 0px transparent !important; }
-    @media (max-width: 37.5em) {
-      .form-close {
-        position: absolute;
-        right: 3px;
-        top: 2px;
-        width: 55px;
-        height: 55px;
-        z-index: 10000; } }
-    .form-close:hover {
-      background-color: rgba(255, 255, 255, 0.7);
-      box-shadow: 1px 1px 10px black; }
-    .form-close:hover > .form-close-btn::before {
-      background-color: red; }
-    .form-close:hover > .form-close-btn::after {
-      background-color: red; }
-    .form-close-btn::before, .form-close-btn::after {
-      position: absolute;
-      right: 35px;
-      top: 10px;
-      content: ' ';
-      height: 63px;
-      width: 10px;
-      background-color: white;
-      border-radius: 10px;
-      cursor: pointer; }
-      @media (max-width: 37.5em) {
-        .form-close-btn::before, .form-close-btn::after {
-          height: 37px;
-          width: 7px;
-          right: 25px;
-          top: 9px; } }
-    .form-close-btn::before {
-      transform: rotate(45deg); }
-    .form-close-btn::after {
-      transform: rotate(-45deg); }
 
 .menu {
   width: 600%; }
